--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -72,9 +72,13 @@ body {
   .ant-input-number-input {
     border-radius: 0;
   }
+  .ant-input-number-focused {
+    box-shadow: none;
+  }
   .ant-input-number-input {
     background-color: transparent;
     color: $borderLight;
+    min-width: 5.5rem;
   }
   .ant-input-number-input:hover {
     color: white;
@@ -84,11 +88,21 @@ body {
     outline: none;
   }
   .ant-input-number-handler-wrap {
+    position: relative;
+    min-width: 2rem;
     opacity: 0.7;
     transition: unset;
     background: transparent;
     border: unset;
-
+@media (min-width: 960px) {
+  position: absolute;
+  width: 22px;
+  min-width: 0;
+}
+    span {
+      width: 22px;
+      height: 15px;
+    }
     svg {
       fill: $textWhite;
     }
