--- a/styles/ProductDetail.module.scss
+++ b/styles/ProductDetail.module.scss
@@ -44,6 +44,14 @@
         flex-grow: unset;
       }
     }
+    :global(.ant-form-number) {
+      flex-grow: 1;
+      max-width: 30%;
+      @media (max-widt: 575px) {
+        max-width: 100%;
+        flex-grow: unset;
+      }
+    }
     :global(.ant-form-item-control-input-content) {
       flex-grow: 1;
       max-width: 30%;
@@ -71,7 +79,6 @@
     button:disabled {
       cursor: not-allowed;
     }
-    margin-left: 0;
     display: flex;
     flex-direction: column;
     justify-content: left;
