--- a/styles/ProductOverView.module.scss
+++ b/styles/ProductOverView.module.scss
@@ -14,21 +14,64 @@
     padding: 20px;
   }
   p {
-    text-align: center;
+    text-align: left;
     font-family: $fontHeader;
     font-size: 1rem;
     margin-top: 1.5px;
+    padding: 0 15px;
+  }
+  .taste {
+    margin-top: 15px;
+  }
+  .productName {
+    font-size: 25px;
   }
   .selectWrapper {
     position: relative;
-  }
-  h1 {
-    font-size: 25px;
+    :global(.ant-form-item-label) {
+      flex-grow: 1;
+      max-width: fit-content;
+      @media (min-width: 575px) {
+        max-width: 100%;
+        flex-grow: unset;
+      }
+    }
+    :global(.ant-form-item-control) {
+      flex-grow: 1;
+      max-width: fit-content;
+      @media (min-width: 575px) {
+        max-width: 100%;
+        flex-grow: unset;
+      }
+    }
+    :global(.ant-form-number) {
+      flex-grow: 1;
+      max-width: 30%;
+      @media (min-width: 575px) {
+        max-width: 100%;
+        flex-grow: unset;
+      }
+    }
+    :global(.ant-form-item-control-input-content) {
+      flex-grow: 1;
+      max-width: 30%;
+      @media (min-width: 575px) {
+        max-width: 100%;
+        flex-grow: unset;
+      }
+    }
+    :global(.ant-input-number) {
+      width: 60px;
+    }
   }
 
   .price {
     font-weight: 900;
-    font-size: xx-large;
+    font-size: 25px;
+    @media (min-width: 575px) {
+      margin-bottom: 0;
+      margin-top: 15px;
+    }
   }
 
   .topSection {
@@ -43,24 +86,31 @@
     text-align: center;
   }
 
-  .selectWrapper {
-    position: relative;
-  }
-
   .bottomSection {
     margin-top: 15px;
   }
-  .price {
-    font-weight: 900;
-    font-size: xx-large;
-  }
-  p {
-    text-align: left;
-  }
   .snipcartAddItem {
-    margin: auto;
+    margin: 0 auto 15px auto;
+    @media (min-width: 575px) {
+      margin: 15px auto;
+    }
+    :global(.snipcart-add-item) {
+      margin: 0 15px;
+      padding: 8px 9px;
+      width: fit-content;
+      @media (min-width: 575px) {
+        margin: 15px;
+      }
+    }
     button:disabled {
       cursor: not-allowed;
+    }
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    @media (min-width: 460px) {
+      margin-left: auto;
+      display: block;
     }
   }
 }
