change URL back, fix styling

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -19,7 +19,7 @@
   :global(.ant-modal) {
     top: unset;
     padding: 0;
-    max-width: unset;
+    min-width: unset;
   }
   .wrapper {
     @media (min-width: 450px) {
@@ -44,7 +44,7 @@
   :global(.ant-modal) {
     top: unset;
     padding: 0;
-    max-width: unset;
+    min-width: unset;
   }
   :global(.ant-modal-body) {
     padding: 24px;
