--- a/styles/ProductTeaser.module.scss
+++ b/styles/ProductTeaser.module.scss
@@ -26,7 +26,7 @@
       height: 20%;
     }
     img {
-      max-width: 100%;
+      min-width: 100%;
       height: auto;
       padding-top: 1.5rem !important;
     }
